adds dependency for the position tools

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
         "mixins/_prefixRule.scss",
         "mixins/_tools-shape.scss",
         "mixins/_tools-size.scss",
+        "mixins/_tools-position.scss",
         "_mixins.scss",
         "_0.settings.scss",
         "_2.layout.scss",
