--- a/package.json
+++ b/package.json
@@ -23,8 +23,5 @@
   "bugs": {
     "url": "https://github.com/meodai/bonescss/issues"
   },
-  "homepage": "https://github.com/meodai/bonescss#readme",
-  "dependencies": {
-    "sensible": "^0.5.6"
-  }
+  "homepage": "https://github.com/meodai/bonescss#readme"
 }
