--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "SCSS/CSS starting-point for every project. Mixes smacss namespaced h5bp things with other stuff I use all the time. It includes all the nice things from H5BP nicely namespaced using SMACSS",
   "main": "main.scss",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --inline --hot",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,25 @@
   "bugs": {
     "url": "https://github.com/meodai/bonescss/issues"
   },
-  "homepage": "https://github.com/meodai/bonescss#readme"
+  "homepage": "https://github.com/meodai/bonescss#readme",
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-runtime": "^5.8.35",
+    "css-loader": "^0.23.1",
+    "jade": "^1.11.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "template-html-loader": "0.0.3",
+    "vue": "^1.0.15",
+    "vue-hot-reload-api": "^1.3.1",
+    "vue-html-loader": "^1.1.0",
+    "vue-loader": "^8.0.5",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^2.0.5-beta",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
