--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jade": "^1.11.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.1.2",
+    "sass-variables-loader": "^0.1.3",
     "style-loader": "^0.13.0",
     "template-html-loader": "0.0.3",
     "vue": "^1.0.15",
