--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.8.35",
     "css-loader": "^0.23.1",
+    "gulp": "^3.9.0",
     "jade": "^1.11.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.1.2",
@@ -46,6 +47,7 @@
     "vue-loader": "^8.0.5",
     "vue-style-loader": "^1.0.0",
     "webpack": "^2.0.5-beta",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.1.0"
   }
 }
